--- a/.github/crowdin.yml
+++ b/.github/crowdin.yml
@@ -3,15 +3,15 @@
 
 files:
   - source: /emhttp/languages/unraid-webgui.po
-    translation: /%locale%/unraid-webgui.po
+    translation: /emhttp/languages/%locale%/unraid-webgui.po
     scheme: file
 
   - source: /emhttp/languages/unraid-webgui-js.po
-    translation: /%locale%/unraid-webgui-js.po
+    translation: /emhttp/languages/%locale%/unraid-webgui-js.po
     scheme: file
 
   - source: /emhttp/languages/helptext.txt
-    translation: /%locale%/helptext.txt
+    translation: /emhttp/languages/%locale%/helptext.txt
     scheme: file
 
 # Export settings
@@ -19,3 +19,5 @@ export_only_approved: false
 skip_untranslated_files: false
 skip_untranslated_strings: false
 preserve_hierarchy: false
+
+download_translations_args: --verbose
